<resources>
    <string name="app_name">4travel</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="registrar">Cadastre-se aqui</string>
    <string name="login">ENTRAR</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="nomeUsuario">Escolha seu nome de usuário</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="jaPossuiCadastro">Já possui cadastro?</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="error_valid_email_password">E-mail ou Senha incorretos</string>
    <string name="error_message_email">Digite um e-mail válido</string>
    <string name="error_message_name">Digite o nome completo</string>
    <string name="error_password_match">As senhas estão diferentes</string>
    <string name="error_message_password">Digite sua senha</string>
    <string name="success_message">Cadastro efetuado com sucesso</string>
    <string name="error_email_exists">E-mail já existe</string>
    <string name="txtEmail">E-mail</string>
    <string name="txtSenha">Senha</string>
    <string name="criarRoteiro">CRIAR ROTEIRO</string>
    <string name="mostrarRoteiro">MOSTRAR ROTEIRO</string>
    <string name="imagemlogo">Imagem</string>
    <string name="text_title">4travel</string>
    <string name="text_hello">Olá,</string>
    <string name="text_accounts">Todas as contas</string>
    <string name="deletar_usuario">Deletar usuário</string>
    <string name="btnDeletar">X</string>
    <string name="txtId">ID</string>
    <string name="edtID">ID que deseja deletar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="error_força_senha">A senha deve conter 8 caracteres, ao menos uma letra maiúscula, um número e um caracter especial</string>
    <string name="recreio"> RECREIO</string>
    <string name="barradatijuca"> BARRA DA TIJUCA</string>
    <string name="guaratiba"> GUARATIBA</string>
    <string name="copabacana"> COPACABANA</string>
    <string name="roteiroCompleto"> PRECISO DO ROTEIRO COMPLETO</string>
    <string name="precisoHotel"> PRECISO APENAS DE HOTEL</string>
    <string name="precisoPasseio"> PRECISO APENAS DE PASSEIOS</string>
    <string name="precisoGastronomia"> OPÇÕES GASTRONÔMICAS </string>
    <string name="continuar">CONTINUAR</string>
    <string name="todo">TODO</string>
    <string name="hoteisRecreio">HOTEIS</string>
    <string name="gastronomiaRecreio">GASTRONOMIA</string>
    <string name="atlanticosul">ATLÂNTICO SUL</string>
    <string name="cdesign">CDESIGN HOTEL</string>
    <string name="ramada">RAMADA</string>
    <string name="descricaoAtlanticoSul">Hotel situado na Avenida Lúcio Costa, 18000. Próximo a praia. R$ 275 a diária.</string>
    <string name="descricaocdesign">Hotel situado na Avenida Lúcio Costa, 17360. Próximo a praia. R$ 306 a diária.</string>
    <string name="descricaoRamada">Hotel situado na Av. das Américas, 19.021. Próximo ao Recreio Shopping. R$ 235 a diária.</string>
    <string name="descricaoNaBrasa">Choperia situada de frente para a praia que serve carnes seletas na brasa e galetos, entre guarnições e variedades.</string>
    <string name="na_brasa_columbia">NA BRASA COLUMBIA</string>
    <string name="passeiosRecreio">PASSEIOS</string>
    <string name="americas">SHOPPING AMERICAS</string>
    <string name="pedrapontal">PEDRA DO PONTAL</string>
    <string name="praiaSecreto">PRAIA DO SECRETO</string>
    <string name="descricaoPraiaSecreto">Uma caminhada por pedras íngremes leva a uma pitoresca praia com piscinas naturais propícias para nadar.</string>
    <string name="descricaopedrapontal">Trilha localizada no posto 12 da praia do Recreio, conta com um lindo visual para tirar fotos e uma vista maravilhosa.</string>
    <string name="descricaoamericas">Shopping moderno para comprar roupas e artigos domésticos, praça de alimentação, cinema e pista de gelo.</string>
    <string name="reserva">RESERVA</string>
    <string name="paocia">PÃO E COMPANHIA</string>
    <string name="alegria">ALEGRIA DE GUARATIBA PADARIA E MERCEARIA</string>
    <string name="alegriadescricao">Padaria e mercearia que contém diversas opções para você aproveitar no local ou levar para sua casa.</string>
    <string name="paociadescricao">Padaria localizada em Copacabana que oferece diversas opções.</string>
    <string name="santamarta">PADARIA SANTA MARTA</string>
    <string name="santamartadescricao">Casa de pães tem doces de confeiteiro com balcão de quitutes e cafeteria que serve lanches de copa e chapa.</string>
    <string name="reidorecreio">PADARIA REI DO RECREIO</string>
    <string name="reidorecreiodescricao">Café da manhã e almoços buffet, além de pães, bolos e sopas, em espaço amplo com mercearia e hortifruti.</string>
    <string name="descricaoreserva">A Praia da Reserva, também conhecida como Praia da Reserva de Marapendi, é uma praia situada no bairro do Recreio, na Zona Oeste da cidade do Rio de Janeiro. Com cerca de 8,0 km de extensão, localiza-se entre a Praia da Barra da Tijuca e a Praia do Recreio.</string>
    <string name="riosul">RIO SUL</string>
    <string name="chicomendes">CHICO MENDES</string>
    <string name="descricaochicomendes">O Parque Ecológico Chico Mendes, ou Parque Natural Municipal Chico Mendes, é uma unidade de conservação pública situada no Recreio dos Bandeirantes, na cidade do Rio de Janeiro, Brasil.</string>
    <string name="descricaoRioSul">Rodízio de carnes com ampla variedade de carnes, buffet livre e comida japonesa em salão tradicional.</string>
    <string name="bahamas">BAHAMAS STEAK HOUSE</string>
    <string name="descricaobahamas">Churrascaria rústica com entradas, carnes, frutos do mar, chope e outras bebidas, além de mesas ao ar livre.</string>
    <string name="kacua">KAÇUÁ BAR E RESTAURANTE</string>
    <string name="descricaokacua">Pratos tradicionais de regiões da Bahia e de Sergipe em um cenário rústico com música e caipirinha.</string>
    <string name="parme">PARMÊ</string>
    <string name="descricaoparme">Rede de restaurantes famosa pelas pizzas e massas, tem amplo cardápio e clima alegre e familiar, com delivery.</string>
    <string name="riozen">RIO ZEN SUSHI</string>
    <string name="descricaoriozen">Menu variado com destaque para os pratos típicos da gastronomia japonesa, em ambiente tranquilo com varanda.</string>
    <string name="gastronomia">Gastronomia </string>
    <string name="txtGastronomia">Gastronomia </string>
    <string name="txtHotel">Hotel</string>
    <string name="txtPasseio">Passeio</string>
    <string name="hotel">Hotel </string>
    <string name="roteiro"> SEU ROTEIRO</string>
    <string name="passeio">Passeio </string>
    <string name="ksbeack">KS BEACH HOTEL</string>
    <string name="região">Região</string>
    <string name="lamole">La Mole - Copacabana</string>
    <string name="mondego">RESTAURANTE MONDEGO</string>
    <string name="carlos">ESTÁTUA DE CARLOS DRUMMOND DE ANDRADE</string>
    <string name="calçadao">CALÇADÃO DE COPACABANA</string>
    <string name="chacrinha">PARQUE ESTADUAL DA CHACRINHA</string>
    <string name="chacrinhadescricao">O Parque Estadual da Chacrinha é uma Unidade de Conservação gerenciada pelo prefeitura do Rio de Janeiro, Está localizado no bairro de Copacabana, na cidade do Rio de Janeiro, em uma de suas áreas mais densamente povoadas.</string>
    <string name="museudoforte">MUSEU HISTÓRICO DO EXÉRCITO E FORTE DE COPACABANA</string>
    <string name="museudofortedescricao">Situado na Praça Cel. Eugênio Franco, 1. Foi contruído no final do século XIX quando o Rio de Janeiro ainda era capital do Brasil.</string>
    <string name="calçadaodescricao">Situado na Av. Atlântica, 22d. O calçadão de Copacabana é extenso e possui uma bela vista para a praia da zona sul.</string>
    <string name="carlosdescricao">Escultura de bronze à beira-mar do poeta brasileiro Carlos Drummond de Andrade, ponto famoso para tirar fotos.</string>
    <string name="mondegodescricao">Restaurante tradicional da praia de Copacabana que serve aperitivos, chope, carnes e pratos brasileiros.</string>
    <string name="eclipse">ECLISE BAR RESTAURANTE PIZZARIA 24 HORAS</string>
    <string name="eclipsedescricao">Pizzaria moderna com ambiente familiar que serve carnes grelhadas, pizzas, sucos e lanches.</string>
    <string name="lamoledescricao">Rede tradicional de amplos restaurantes de comida italiana, cardápios sazonais e pizzas, em ambiente familiar.</string>
    <string name="conversafora">CONVERSA FORA NA BRASA</string>
    <string name="conversaforadescricao">Situado na Rua Constante Ramos, 109. Restaurante ideal para comer uma carne enquanto se desfruta de um chop.</string>
    <string name="pérgula">RESTAURANTE PÉRGULA</string>
    <string name="pérguladescricao">Restaurante sofisticado no Copacabana Palace com comida leve e cosmopolita, buffet e brunch aos domingos.</string>
    <string name="doncamillo">DON CAMILLO RESTAURANTE E PIZZARIA</string>
    <string name="doncamillodescricao">Restaurante agradável com cardápio tradicional italiano, uma banda tocando músicas típicas e deque de madeira.</string>
    <string name="txtRegiao">Região</string>
    <string name="lerelais">LE RELAIS DE MARAMBAIA</string>
    <string name="brisa">PRAIA DA BRISA</string>
    <string name="brisadescricao">Praia tranquila e agradável. Com quiosques na orla onde pode-se parar e beber água de côco e comer.</string>
    <string name="arcanoah">ARCA DE NOAH</string>
    <string name="tropicana">RESTAURANTE TROPICANA</string>
    <string name="tropicanadescricao">Caranguejos, pastéis de camarão e moquecas, em estrutura rústica com deck de madeira à beira do manguezal.</string>
    <string name="aquarios">RESTAURANTE AQUARIOS</string>
    <string name="aquariosdescricao">Peixe na brasa e frutos do mar em Barra de Guaratiba.  Estr. Roberto Burle Marx, 5909 - Barra Guaratiba.</string>
    <string name="mirante">RESTAURANTE MIRANTE DE GUARATIBA</string>
    <string name="mirantedescricao">Brasileira, Frutos do mar, Sul-americana. Estrada Roberto Burle Marx 7857 Barra de Guaratiba.</string>
    <string name="tiapenha">RESTAURANTE TIA PENHA</string>
    <string name="tiapenhadescricao">Local familiar, calmo e chique com caranguejo gratinado, caldo de peixe e outros frutos do mar brasileiros.</string>
    <string name="biradescricao">Restaurante de frutos do mar renomado e casual com vista para o mar. Serve peixe cozido em panela de barro.</string>
    <string name="bira">BIRA DE GUARATIBA</string>
    <string name="stadium">STADIUM STEAKHOUSE</string>
    <string name="becco">BECCO RESTAURANTE</string>
    <string name="delirio">DELÍRIO TROPICAL</string>
    <string name="domhelio">DOM HÉLIO</string>
    <string name="gabbiano">GABBIANO</string>
    <string name="maccherone">MACCHERONE</string>
    <string name="maccheronedescricao">Massas, pizzas e risotos, além de carnes, vinhos e sobremesas italianas, em ambiente clássico e acolhedor.</string>
    <string name="gabbianodescricao">Restaurante moderno com o selo Ospitalità Italiana que serve pratos gourmet tradicionais e criativos.</string>
    <string name="domheliodescricao">Restaurante de carnes nobres e massas variadas, vinho, clima familiar, telão e parquinho infantil ao ar livre.</string>
    <string name="deliriodescricao">Rede de restaurantes coloridos e modernos com pratos leves, orgânicos e vegetarianos.</string>
    <string name="beccodescricao">Cozinha brasileira e japonesa em espaço estilizado para 150 pessoas com salão climatizado e área externa.</string>
    <string name="stadiumdescricao">Churrascaria com ambientação americana e churrasco clássico, pratos casuais, chope e decoração de futebol.</string>
</resources>