<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.gastronomiaBarra"
    android:background="@drawable/travelbackgroundpng2"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:isScrollContainer="true">

        <TextView
            android:id="@+id/gastronomiaRecreio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="17dp"
            android:text="@string/gastronomiaRecreio"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="130dp"
            android:layout_marginStart="10dp"
            android:layout_height="130dp"
            android:layout_marginTop="50sp"
            android:background="@drawable/stadium"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/stadium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="-133dp"
            android:text="@string/stadium"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:textColor="@color/black"
            android:text="@string/stadiumdescricao" />

        <ImageButton
            android:layout_width="30sp"
            android:id="@+id/btnStadium"
            android:layout_height="30sp"
            android:layout_marginStart="230sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/coracao" />

        <ImageView
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:background="@drawable/becco"/>

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/becco"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:layout_marginTop="-133sp"
            android:text="@string/becco"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:textColor="@color/black"
            android:text="@string/beccodescricao"/>

        <ImageButton
            android:layout_width="30sp"
            android:id="@+id/btnBecco"
            android:layout_height="30sp"
            android:layout_marginStart="230sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/coracao" />

        <ImageView
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:background="@drawable/deliriotropical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delirio"
            android:layout_marginStart="145sp"
            android:layout_marginTop="-133sp"
            android:text="@string/delirio"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:textColor="@color/black"
            android:text="@string/deliriodescricao"/>

        <ImageButton
            android:layout_width="30sp"
            android:id="@+id/btnDelirio"
            android:layout_height="30sp"
            android:layout_marginStart="230sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/coracao" />

        <ImageView
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:background="@drawable/domhelio"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:layout_marginTop="-133sp"
            android:text="@string/domhelio"
            android:id="@+id/domhelio"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:textColor="@color/black"
            android:text="@string/domheliodescricao"/>

        <ImageButton
            android:layout_width="30sp"
            android:id="@+id/btnDomhelio"
            android:layout_height="30sp"
            android:layout_marginStart="230sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/coracao" />

        <ImageView
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:background="@drawable/gabbiano"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:layout_marginTop="-133sp"
            android:id="@+id/gabbiano"
            android:text="@string/gabbiano"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:textColor="@color/black"
            android:text="@string/gabbianodescricao"/>

        <ImageButton
            android:layout_width="30sp"
            android:id="@+id/btnGabbiano"
            android:layout_height="30sp"
            android:layout_marginStart="230sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/coracao" />

        <ImageView
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="50sp"
            android:background="@drawable/maccherone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:id="@+id/maccherone"
            android:layout_marginTop="-133sp"
            android:text="@string/maccherone"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:textColor="@color/black"
            android:text="@string/maccheronedescricao"/>

        <ImageButton
            android:layout_width="30sp"
            android:id="@+id/btnMaccherone"
            android:layout_height="30sp"
            android:layout_marginStart="230sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/coracao" />




    </LinearLayout>

</ScrollView>